# astronum

./: README.md  com.github.alexkdeveloper.astronum.json  meson.build  org.example.App.json  snapcraft.yaml
data/: com.github.alexkdeveloper.astronum.appdata.xml.in  com.github.alexkdeveloper.astronum.desktop.in  com.github.alexkdeveloper.astronum.gschema.xml  meson.build  org.example.App.desktop.in  org.example.App.gschema.xml
data/icons/: meson.build
po/: LINGUAS  POTFILES  it.po  meson.build  nl.po  ru.po
src/: astronum.gresource.xml  calculator.vala  main.vala  meson.build  window.ui  window.ui~  window.vala
